--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
 	<title>Mozilla is cool</title>
+
     <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
+
+	<script src="scripts/main.js" async></script>
   </head>
   <body>
     <h1>Mozilla 酷毙了</h1>
@@ -18,5 +20,7 @@
     </ul>
     <p>我们致力于让Internet保持活力, 保持畅通, 人人皆可贡献, 人人皆可创造. 我们坚信: 开发平台的写作对人的发展至关重要, 也决定者我们共同的未来.</p>
     <p>为了达成我们共同的理想, 我们遵循一些价值观和理念, 请参阅<a href="https://www.mozilla.org/zh-CN/about/manifesto/">Mozilla 宣言</a></p>
+
+    <button>切换用户</button>
   </body>
 </html>
