添加自动以图标

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
 	<title>Mozilla is cool</title>
+    <link rel="shortcut icon" href="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png">
 
     <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
